--- a/assets/style.css
+++ b/assets/style.css
@@ -63,3 +63,20 @@ h1, h2, h3, h4, h5, h6 {
     border-top: 2px solid lightgrey;
     background-color: #2e5f4f;
 }
+
+#upload-data{
+    /* width: '100%', */
+    height: '60px';
+    border: 1px dashed black;
+    margin: 10px;
+    text-align: center;
+    border-radius: 5px;
+    line-height: 60px;
+    background-color: rgb(236, 236, 236);
+            
+}
+
+#wicon{
+    width: 10em;
+    height: 10em;
+}
